--- a/less/home-page.less
+++ b/less/home-page.less
@@ -17,6 +17,7 @@ html {
           }
       }
       .intro {
+        margin-top: 10rem;
         h2 {
           padding: 15px;
           @media @phone {
