--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 1rem;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        background-color: rgba(211, 111, 53, 0.9);
+        width: 100%;
+        max-width: 800px;
+        border-radius: 5px;
         .nav-text {
             .nav-text-styling
         }
